--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "http-proxy-middleware": "^2.0.6",
     "next": "^12.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "xml2json": "^0.12.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
