--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/constants/setupProxy.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/constants/setupProxy.js", "src/components/Page/index.tsx"],
   "exclude": ["node_modules"]
 }
