--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/css": "^11.10.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.10",
     "axios": "^1.1.3",
     "http-proxy-middleware": "^2.0.6",
     "next": "^12.3.1",
@@ -17,6 +23,8 @@
     "xml2json": "^0.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@emotion/babel-plugin": "^11.10.2",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
