--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "axios": "^1.1.3",
+    "framer-motion": "^7.6.4",
     "http-proxy-middleware": "^2.0.6",
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-particles-js": "^3.6.0",
+    "three": "^0.146.0",
     "xml2json": "^0.12.0"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/three": "^0.144.0",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "eslint": "^8.25.0",
