--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^1.1.3",
     "framer-motion": "^7.6.4",
     "http-proxy-middleware": "^2.0.6",
