--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "@react-three/drei": "^9.43.3",
+    "@react-three/fiber": "^8.9.1",
     "axios": "^1.1.3",
     "framer-motion": "^7.6.4",
     "http-proxy-middleware": "^2.0.6",
@@ -22,7 +24,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-particles-js": "^3.6.0",
+    "swr": "^1.3.0",
     "three": "^0.146.0",
+    "three-gltf-loader": "^1.111.0",
     "use-intersection": "^0.2.1",
     "xml2json": "^0.12.0"
   },
