--- a/package.json
+++ b/package.json
@@ -17,16 +17,13 @@
     "@mui/material": "^5.10.10",
     "@react-three/drei": "^9.43.3",
     "@react-three/fiber": "^8.9.1",
-    "axios": "^1.1.3",
     "framer-motion": "^7.6.4",
     "http-proxy-middleware": "^2.0.6",
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^1.3.0",
-    "three": "^0.146.0",
-    "three-gltf-loader": "^1.111.0",
-    "xml2json": "^0.12.0"
+    "three": "^0.146.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
